--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <button id="play">Play</button>
         <button id="restart">Restart</button>
     </div>
+
     <div class="parent">
         <div class="play-ground">
         
@@ -29,7 +30,15 @@
         </div>
 
         <div class="instruction-box">
-            hi
+            <div class="turn-para">
+                <p>Player <span class="playturn">X's</span> Turn</p>
+            </div>
+            <br>
+            <div class="win-para">
+                <p>Player <span class="winturn">X</span> wins!</p>
+                <br>
+                <p class="draw">Draw!!</p>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
