--- a/index.html
+++ b/index.html
@@ -29,15 +29,21 @@
     
         </div>
 
-        <div class="instruction-box">
-            <div class="turn-para">
-                <p>Player <span class="playturn">X's</span> Turn</p>
+        
+        <div class="left-part">
+            <div class="welcome-box">
+                <p>WELCOME TO TIC TAC</p>
             </div>
-            <br>
-            <div class="win-para">
-                <p>Player <span class="winturn">X</span> wins!</p>
+            <div class="instruction-box">
+                <div class="turn-para">
+                    <p>Player <span class="playturn">X's</span> Turn</p>
+                </div>
                 <br>
-                <p class="draw">Draw!!</p>
+                <div class="win-para">
+                    <p>Player <span class="winturn">X</span> wins!</p>
+                    <br>
+                    <p class="draw">Draw!!</p>
+                </div>
             </div>
         </div>
     </div>
