functioning of playground

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div class="play-ground">
         
             <div class="main-game">
-                <div class="value"><p>X</p></div>
-                <div class="value"><p>X</p></div>
-                <div class="value"><p>X</p></div>
-                <div class="value"><p>X</p></div>
-                <div class="value"><p>X</p></div>
-                <div class="value"><p>X</p></div>
-                <div class="value"><p>X</p></div>
-                <div class="value"><p>X</p></div>
-                <div class="value"><p>X</p></div>
+                <div id="0" class="value"><p>X</p></div>
+                <div id="1" class="value"><p>X</p></div>
+                <div id="2" class="value"><p>X</p></div>
+                <div id="3" class="value"><p>X</p></div>
+                <div id="4" class="value"><p>X</p></div>
+                <div id="5" class="value"><p>X</p></div>
+                <div id="6" class="value"><p>X</p></div>
+                <div id="7" class="value"><p>X</p></div>
+                <div id="8" class="value"><p>X</p></div>
             </div>
     
         </div>
@@ -35,7 +35,7 @@
                 <p>WELCOME TO TIC TAC</p>
             </div>
             <div class="instruction-box">
-                <div class="turn-para">
+                <div class="turn-para" id="tp">
                     <p>Player <span class="playturn">X's</span> Turn</p>
                 </div>
                 <br>
